# compra-cr

./: .gitignore  .htaccess  CMakeLists.txt  README.md  compra.cr.conf  install.sh
Google_tests/: CMakeLists.txt  basic_check.cpp
bd/: data.sql  purchase_sp.sql  schema_and_user.sql  table_definition.sql
etc/: compra.cr.conf  my.cnf  root-ca.conf  server.conf  sub-ca.conf
src/: CMakeLists.txt  main.c  main.cpp  test.cpp
src/auth/: PasswordHasher.cpp  PasswordHasher.h  SessionManager.cpp  SessionManager.h
src/http/: CartController.cpp  CartController.h  Controller.cpp  Controller.h  ProductController.cpp  ProductController.h  Request.cpp  Request.h  Response.cpp  Response.h  Router.cpp  Router.h  UserController.cpp  UserController.h  http.cpp  http.h
src/model/: CardPayment.cpp  CardPayment.h  ConectionHandler.cpp  ConectionHandler.h  ConnectionHandler.h  Product.cpp  Product.h  Purchase.cpp  Purchase.h  Session.cpp  Session.h  User.cpp  User.h  model.cpp  model.h
src/util/: cookie.cpp  cookie.h  decode.cpp  decode.h  log.c  log.cpp  log.h
src/validate/: EmailValidator.cpp  EmailValidator.h  MapValidator.cpp  MapValidator.h  StringValidator.cpp  StringValidator.h  Validator.cpp  Validator.h
src/view/: DomItem.cpp  DomItem.h  Form.cpp  Form.h  FormInput.cpp  FormInput.h  NavItem.cpp  NavItem.h  PageBuilder.cpp  PageBuilder.h  ProductBuilder.cpp  ProductBuilder.h  ProductCard.cpp  ProductCard.h  Table.cpp  Table.h
src/view/cart/: CheckoutBuilder.cpp  CheckoutBuilder.h
src/view/other/: NotFoundPageBuilder.cpp  NotFoundPageBuilder.h
src/view/product/: ProductAddBuilder.cpp  ProductAddBuilder.h  ProductListBuilder.cpp  ProductListBuilder.h
src/view/user/: UserAddBuilder.cpp  UserAddBuilder.h  UserLoginBuilder.cpp  UserLoginBuilder.h
test/: CMakeLists.txt
test/auth/: PasswordHassherTest.cpp
test/validate/: MapValidatorTest.cpp  MapValidatorTest.h  ValidatorTest.cpp  ValidatorTest.h
webroot/: .htaccess
webroot/html/: index.html  user_add.html
